# Ship-Sandbox

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Game2.cpp  Game2.h  GameController.cpp  GameController.h  GameException.h  GameParameters.h  Log.cpp  Log.h  LoggingDialog.cpp  LoggingDialog.h  LoggingWindow.cpp  LoggingWindow.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  Makefile.OSX  README.markdown  README.md  RenderParameters.h  RenderSettings.h  Scheduler.cpp  ShipSandbox TODO.txt  ShipSandbox.aps  Version.h  _scheduler.cpp  changes.txt  game.cpp  game.h  license.txt  main.cpp  main_old.cpp  main_test_wx.cpp  material.cpp  ogl.h  phys.cpp  phys.h  (+17 more)
Data/: example.json  materials.json
Data/Sounds/: break_cable_medium_1.flac  break_cable_medium_underwater_1.flac  break_cable_small_1.flac  break_cable_small_2.flac  break_cable_small_3.flac  break_cable_small_4.flac  break_cable_small_5.flac  break_cable_small_underwater_1.flac  break_cable_small_underwater_2.flac  break_cable_small_underwater_3.flac  break_cable_small_underwater_4.flac  break_cable_small_underwater_5.flac  break_glass_medium_1.flac  break_glass_medium_underwater_1.flac  break_glass_small_1.flac  break_glass_small_2.flac  break_glass_small_3.flac  break_glass_small_underwater_1.flac  break_glass_small_underwater_2.flac  break_glass_small_underwater_3.flac  break_metal_large_1.flac  break_metal_large_2.flac  break_metal_large_3.flac  break_metal_large_4.flac  break_metal_large_underwater_1.flac  break_metal_large_underwater_2.flac  break_metal_large_underwater_3.flac  break_metal_large_underwater_4.flac  break_metal_large_underwater_5.flac  break_metal_large_underwater_6.flac  break_metal_medium_1.flac  break_metal_medium_2.flac  break_metal_medium_3.flac  break_metal_medium_4.flac  break_metal_medium_underwater_1.flac  break_metal_medium_underwater_2.flac  break_metal_medium_underwater_3.flac  break_metal_medium_underwater_4.flac  break_metal_small_1.flac  break_metal_small_2.flac  (+137 more)
GameLib/: AABB.cpp  AABB.h  CMakeLists.txt  Cable.cpp  Cable.h  Cloud.h  ElectricalElement.cpp  ElectricalElement.h  ElementRepository.h  FixedSizeVector.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameEventDispatcher.h  GameException.cpp  GameException.h  GameMath.h  GameOpenGL.cpp  GameOpenGL.h  GameParameters.h  Generator.cpp  Generator.h  IGameEventHandler.h  ImageData.h  ImageSize.h  Lamp.cpp  Lamp.h  Log.cpp  Log.h  Material.cpp  Material.h  MaterialDatabase.h  Physics.h  Point.cpp  Point.h  PointerContainer.cpp  PointerContainer.h  ProgressCallback.h  RenderContext.cpp  (+40 more)
Glad/: CMakeLists.txt  glad.c
Glad/glad/: glad.h
PerfReports/: PerfAnalysis.txt  Report20180127-1656_Game.diagsession
PerfReports/20180203-1443/: Report20180203-1443.diagsession
Resources/: CMakeLists.txt  ShipSandbox.rc
ShipSandbox/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  EventTickerPanel.cpp  EventTickerPanel.h  LoggingDialog.cpp  LoggingDialog.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  SettingsDialog.cpp  SettingsDialog.h  SoundController.cpp  SoundController.h  SplashScreenDialog.cpp  SplashScreenDialog.h  Version.h
ShipSandbox/Resources/: ShipSandbox.rc
Ships/: Carnival Dream.shp  IKC Krafting.shp  RMS Titanic.shp  ikc_krafting.shp
UnitTests/: CMakeLists.txt  ElementRepositoryTests.cpp  FixedSizeVectorTests.cpp  GameEventDispatcherTests.cpp  Main.cpp  PointerContainerTests.cpp  ShipTests.cpp  TupleKeysTests.cpp  VectorsTests.cpp
data/: materials.json
wxsmith/: settingsDialog.wxs  titanicframe.wxs
